--- a/Simple Todo List/index.html
+++ b/Simple Todo List/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Todo List</title>
-    <link rel="stylesheet" src="./style.css">
+    <link rel="stylesheet" href="style.css">
+    <div class="todoBody">
+        <h1>To Do List</h1>
+        <div class="todoMainBody">
+            <input type="text"><button>+</button>
+        </div>
+
+    </div>
 </head>
 <body>
     
 </body>
+<script src="./main.js"></script>
 </html>
