--- a/Simple Counter/index.html
+++ b/Simple Counter/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="title">A Simple Counter App</div>
-    <p id="num-space"></p>
+    <p id="num_space"></p>
     <button id="btn">Click Me</button>
 
     
 </body>
+<script src="./main.js"></script>
 </html>
