--- a/Simple Todo List/index.html
+++ b/Simple Todo List/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <div class="todoBody">
         <h1>To Do List</h1>
-        <div class="todoMainBody">
-       
+
+        <input type="text" id="inputValue">
+        <div id="todoArea">
+
         </div>
-        <input type="text"><button>+</button>
+        <button id="todoBtn">+</button>
 
     </div>
 </head>
