--- a/Image Slider/index.html
+++ b/Image Slider/index.html
@@ -7,7 +7,12 @@
     <title>Image Slider</title>
 </head>
 <body>
-<div></div>
+<div class="wrapper">
+<div class="pic-container">
+<img id="" src=" ./image"3
+</div>
+
+</div>
     
 </body>
 <script src="./index.js"></script>
