--- a/Image Slider/index.html
+++ b/Image Slider/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="wrapper">
 <div class="pic-container">
-<img id="" src=" ./image"3
+<img id="" src=" ./image">
 </div>
 
 </div>
