--- a/Image Slider/index.html
+++ b/Image Slider/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+H<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 <div class="pic-container">
 <img id="" src=" ./image">
 </div>
-
+C
 </div>
     
 </body>
