--- a/Image Slider/index.html
+++ b/Image Slider/index.html
@@ -11,7 +11,10 @@ H<!DOCTYPE html>
 <div class="pic-container">
 <img id="" src=" ./image">
 </div>
-C
+<div class="btn">
+<button id="previous">Previous</button>
+<button id="next">Next</button 4
+</div>
 </div>
     
 </body>
