--- a/Image Slider/index.html
+++ b/Image Slider/index.html
@@ -1,22 +1,23 @@
-H<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Slider</title>
+   
 </head>
 <body>
-<div class="wrapper">
-<div class="pic-container">
-<img id="" src=" ./image">
-</div>
-<div class="btn">
-<button id="previous">Previous</button>
-<button id="next">Next</button 4
-</div>
-</div>
+    <div class="wrapper">
+        <div class="pic-container">
+            <img id="image" width="500px" height="500px" src="./image/1.jpg">
+        </div>
+        <div class="btn">
+            <button id="prevBtn">Previous</button>
+            <button id="nextBtn">Next</button>
+        </div>
+    </div>
     
 </body>
-<script src="./index.js"></script>
+<script src="main.js"></script>
 </html>
