--- a/Popup Message/index.html
+++ b/Popup Message/index.html
@@ -7,6 +7,17 @@
     <title>PopUp Message Box</title>
 </head>
 <body>
+    <div class="wrapper">
+        <button>Check Message</button>
+            <div class="messageBox">
+                <header class="headerSide">
+                    <div class="headerTitle"></div>
+                    <button >$times</button>
+                </header>
+                <div class="bodySide"></div>
+            </div>
+
+    </div>
     
 </body>
 </html>
