--- a/Popup Message/index.html
+++ b/Popup Message/index.html
@@ -13,7 +13,7 @@
             <div class="messageBox">
                 <header class="headerSide">
                     <div class="headerTitle"></div>
-                    <button >$times</button>
+                    <button >&times;</button>
                 </header>
                 <div class="bodySide"></div>
             </div>
