--- a/Popup Message/index.html
+++ b/Popup Message/index.html
@@ -11,10 +11,10 @@
     <div class="wrapper">
         <button>Check Message</button>
             <div class="messageBox">
-                <header class="headerSide">
+                <div class="headerSide">
                     <div class="headerTitle"></div>
                     <button >&times;</button>
-                </header>
+                </div>
                 <div class="bodySide"></div>
             </div>
 
