--- a/Popup Message/index.html
+++ b/Popup Message/index.html
@@ -15,7 +15,19 @@
                     <div class="headerTitle"></div>
                     <button >&times;</button>
                 </div>
-                <div class="bodySide"></div>
+                <div class="bodySide">
+                    Lorem ipsum dolor sit amet consectetur
+                     adipisicing elit. Quos consequuntur pe
+                     rspiciatis porro neque velit iure delen
+                     iti tenetur culpa id, aperiam molestias 
+                     assumenda magni aliquid nulla esse. Sim
+                     ilique fugiat enim eos. Lorem ipsum dolor 
+                     sit amet consectetur adipisicing elit. Q
+                     uaerat illum mollitia, minima, facilis r
+                     eiciendis fugiat ducimus repellat tenetu
+                     r velit nesciunt aperiam ipsam autem vit
+                     ae assumenda rem amet magni, enim suscipit.
+                </div>
             </div>
 
     </div>
