--- a/Popup Message/index.html
+++ b/Popup Message/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <button>Check Message</button>
+        <button class="checkBtn" id="checkBtn">Check Message</button>
             <div class="messageBox">
                 <div class="headerSide">
-                    <div class="headerTitle"></div>
-                    <button >&times;</button>
+                    <div class="headerTitle">From Bola</div>
+                    <div><button class="closeBtn" id="closeBtn">&times;</button></div>
                 </div>
                 <div class="bodySide">
                     Lorem ipsum dolor sit amet consectetur
