--- a/Popup Message/index.html
+++ b/Popup Message/index.html
@@ -29,9 +29,9 @@
                      ae assumenda rem amet magni, enim suscipit.
                 </div>
             </div>
-
     </div>
-    
+    <div id="overlay"></div>
+   
 </body>
 <script src="./main.js"></script>
 </html>
