--- a/Popup Message/index.html
+++ b/Popup Message/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <button class="checkBtn" id="checkBtn">Check Message</button>
-            <div class="messageBox">
+        <button data-modal-target="#messageBox">Check Message</button>
+            <div class="messageBox" id="messageBox">
                 <div class="headerSide">
                     <div class="headerTitle">From Bola</div>
-                    <div><button class="closeBtn" id="closeBtn">&times;</button></div>
+                    <div><button data-close-button class="closeBtn">&times;</button></div>
                 </div>
                 <div class="bodySide">
                     Lorem ipsum dolor sit amet consectetur
